--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Dashboard/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Dashboard/Index.cshtml
@@ -31,12 +31,12 @@
             </div>
             <div class="box-body">
                 <div class="col-md-3">
-                    <canvas style="margin: 0px auto;" class="canvas" id="UltimasVentasAnio"></canvas>
+                    <canvas class="canvas" id="UltimasVentasAnio"></canvas>
                 </div>
                 <div class="col-md-1">
                 </div>
                 <div class="col-md-3">
-                    <canvas style="margin: 0px auto;" class="canvas" id="UltimasVentasMeses"></canvas>
+                    <canvas class="canvas" id="UltimasVentasMeses"></canvas>
                 </div> 
                 <div class="col-md-1">
                 </div>
@@ -88,7 +88,7 @@
             </div>
             <div class="box-body">
                 <div class="col-md-6">
-                    <canvas style="margin: 0px auto;" class="canvas" id="VentasClientes"></canvas>
+                    <canvas class="canvas" id="VentasClientes"></canvas>
                 </div>
                 <div class="col-md-6">
                     <table id="Table_VentasClientes" class="table table-responsive dataTable dataTables_paginate">
@@ -120,7 +120,7 @@
                 <div class="col-md-1">
                 </div>
                 <div class="col-md-3">
-                    <canvas style="margin: 0px auto;" class="canvas" id="VentasProductos"></canvas>
+                    <canvas class="canvas" id="VentasProductos"></canvas>
                 </div>
                 <div class="col-md-2">
                 </div>
